<resources>
    <string name="app_name">Contact2</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_description">Contact Image</string>
    <string name="fragment_second">Second Fragment TextView</string>
    <!-- input hints -->
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday(格式YYYY.MM.DD)</string>
    <string name="pick">Pick Image</string>
    <string name="imageUri">ImageUri</string>
    <!-- button texts -->
    <string name="save_btn_text">Save</string>
    <string name="delete_btn_text">Delete</string>

</resources>